sgd/reproduction/playground/objects/SVMXC__Warranty__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Object that stores warranty information for installed products. If the product or group of products is linked to an existing warranty template at the time of installed product creation, the warranty is automatically calculated. Warranty can also be created interactively for any installed product record by choosing an appropriate warranty template.</description>
    <fields>
        <fullName>SVMXC__All_Products_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if all products involved in the repair will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if all products involved in the repair will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Products Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Services_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if all services performed will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if all services performed will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Services Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date_Expenses_Covered__c</fullName>
        <description>Date on which expenses coverage ends</description>
        <inlineHelpText>Date on which expenses coverage ends</inlineHelpText>
        <label>End Date Expenses Covered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date_Material_Covered__c</fullName>
        <description>Date on which material coverage ends</description>
        <inlineHelpText>Date on which material coverage ends</inlineHelpText>
        <label>End Date Material Covered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date_Time_Covered__c</fullName>
        <description>Date on which labor coverage ends</description>
        <inlineHelpText>Date on which labor coverage ends</inlineHelpText>
        <label>End Date Time Covered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date__c</fullName>
        <description>Warranty end date</description>
        <inlineHelpText>Warranty end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Exchange_type__c</fullName>
        <description>Type of exchange allowed in the warranty. Copied from warranty template</description>
        <label>Exchange type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Exclusions__c</fullName>
        <description>A free format text to define any exceptions specifically applicable to this installed product</description>
        <inlineHelpText>Define any exceptions specifically applicable to this installed product</inlineHelpText>
        <label>Exclusions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expenses_Covered__c</fullName>
        <description>Percentage of other expenses covered by the warranty</description>
        <inlineHelpText>Percentage of other expenses covered by the warranty</inlineHelpText>
        <label>Expenses % Covered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Installed_Product__c</fullName>
        <description>Name of the installed product for which this warranty is applicable. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Name of the installed product for which this warranty is applicable. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Product Warranty</relationshipLabel>
        <relationshipName>Warranty</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Invoice_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if an invoice is always raised at the end of service delivery. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if an invoice is always raised at the end of service delivery. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Invoice Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Loaner_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if customer is given a temporary replacement product when the covered product is under repair. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if customer is given a temporary replacement product when the covered product is under repair. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Loaner Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Material_Covered__c</fullName>
        <description>Percentage of material cost covered by the warranty</description>
        <inlineHelpText>Percentage of material cost covered by the warranty</inlineHelpText>
        <label>Material % Covered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if customer is eligible for onsite repair when entitled by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if customer is eligible for onsite repair when entitled by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Onsite Repair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if an RMA is always required or an RMA is implied when this warranty is used to entitle a customer. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if an RMA is always required or an RMA is implied when this warranty is used to entitle a customer. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>RMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to bind check box in List of Product Warranty Line records on Visualforce page with controller.</description>
        <inlineHelpText>Field to bind check box in List of Product Warranty Line records on Visualforce page with controller.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the warranty template used to create a warranty. Is a lookup to an existing warranty template record</description>
        <inlineHelpText>Name of the warranty template used to create a warranty. Is a lookup to an existing warranty template record</inlineHelpText>
        <label>Warranty Terms</label>
        <referenceTo>SVMXC__Service_Template__c</referenceTo>
        <relationshipLabel>Product Warranty</relationshipLabel>
        <relationshipName>Warranty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipment_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if customer shipments are covered by the warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if customer shipments are covered by the warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Shipment Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date__c</fullName>
        <description>Warranty start date</description>
        <inlineHelpText>Warranty start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Covered__c</fullName>
        <description>Percentage of labor cost covered by the warranty</description>
        <inlineHelpText>Percentage of labor cost covered by the warranty</inlineHelpText>
        <label>Time % Covered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transferable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this warranty is transferable to other products under special circumstances. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if this warranty is transferable to other products under special circumstances. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Transferable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Travel_Covered__c</fullName>
        <label>Travel % Covered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Walk_in_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if the customer is authorized to walk into a service center for service. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if the customer is authorized to walk into a service center for service. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Walk-in Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Weeks_to_End__c</fullName>
        <description>Number of weeks before the warranty ends. Calculated automatically</description>
        <formula>(SVMXC__End_Date__c - TODAY()) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks to End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Warranty</label>
    <nameField>
        <displayFormat>WN-{000000}</displayFormat>
        <label>Warranty ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Warranty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>